Fix emoji alignment

--- a/github-mod-userstyles.css
+++ b/github-mod-userstyles.css
@@ -73,6 +73,7 @@
         background-image: none;
     }
     g-emoji {
+        display: inline-block;
         vertical-align: top;
     }
     .discussion-item .label-color {
