--- a/github-mod.css
+++ b/github-mod.css
@@ -72,6 +72,7 @@
         background-image: none;
     }
     g-emoji {
+        display: inline-block;
         vertical-align: top;
     }
     .discussion-item .label-color {
